src/test/ui/span/move-closure.stderr
error[E0308]: mismatched types
  --> $DIR/move-closure.rs:15:17
   |
15 |     let x: () = move || (); //~ ERROR mismatched types
   |                 ^^^^^^^^^^ expected (), found closure
   |
   = note: expected type `()`
              found type `move || -> _`

error: aborting due to previous error

